--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,4 +14,14 @@ spawn-location:
   yaw: 0
   pitch: 0
 
+# src/main/resources/config.yml
+roles:
+  Radahn: true
+  Melina: true
+  Sans-éclat: true
+  Ranni: true
+  Godrick: true
+  Morgott: true
+  Margit: true
+  D_témoin_de_la_mort: true
 
