--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -33,6 +33,16 @@ commands:
     usage: /spawn
     permission: uhcplugin.spawn
 
+    commands:
+  startuhc:
+    description: Démarre la partie UHC
+    usage: /startuhc
+    permission: uhcplugin.startuhc
+
+permissions:
+  uhcplugin.startuhc:
+    description: Permission pour démarrer l'UHC
+    default: op
 
 
 
