--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,7 +14,11 @@ spawn-location:
   yaw: 0
   pitch: 0
 
-# src/main/resources/config.yml
+pvp-timer: 10  # Temps en minutes avant l'activation du PvP
+border-size: 100
+role-announcement-delay: 10
+invincibility-duration: 90 # Temps en secondes (1m30)
+
 roles:
   Radahn: true
   Melina: true
@@ -25,8 +29,10 @@ roles:
   Margit: true
   D_témoin_de_la_mort: true
 
-pvp-timer: 10  # Temps en minutes avant l'activation du PvP
-border-size: 100
-role-announcement-delay: 10
-invincibility-duration: 90 # Temps en secondes (1m30)
+camps:
+  Sans-Éclat:
+    couleur: "GRAY"
+  Demi-Dieux:
+    couleur: "GOLD"
+
 
