MasqueDOrRole, normalement tout fonctionne correctement, peut être mieux fait genre cooldown entre appuie mais flemme honnêtement

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,7 +25,7 @@ roles:
   Margit: false
   D_témoin_de_la_mort: false
   Maliketh : false
-  Mask d'or : false
+  Masque d'Or : false
 
 pvp-timer: 1
 border-size: 400
